--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ AdventOfCode/AdventOfCode/obj/
 AdventOfCode/AdventOfCode/bin/
 AdventOfCode/.vs/
 .vs/
+/AdventOfCode/AdventOfCode/Properties/launchSettings.json
